--- a/cv-app/public/index.html
+++ b/cv-app/public/index.html
@@ -29,6 +29,15 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="portal-root">
+      <h1>CV</h1>
+      <h2>Education</h2>
+      <div id="education-portal"></div>
+      <h2>Experience</h2>
+      <div id="experience-portal"></div>
+      <h2>Skills</h2>
+      <div id="skills-portal"></div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
