--- a/cv-app/public/index.html
+++ b/cv-app/public/index.html
@@ -31,6 +31,7 @@
     <div id="root"></div>
     <div id="portal-root">
       <h1>CV</h1>
+      <div id="personal-info-portal"></div>
       <h2>Education</h2>
       <div id="education-portal"></div>
       <h2>Experience</h2>
