formatting and minimal styling

--- a/cv-app/public/index.html
+++ b/cv-app/public/index.html
@@ -30,13 +30,13 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="portal-root">
-      <h1>CV</h1>
+      <h1 class="portal-title-header">CV</h1>
       <div id="personal-info-portal"></div>
-      <h2>Education</h2>
+      <h2 class="portal-header" >Education</h2>
       <div id="education-portal"></div>
-      <h2>Experience</h2>
+      <h2 class="portal-header">Experience</h2>
       <div id="experience-portal"></div>
-      <h2>Skills</h2>
+      <h2 class="portal-header">Skills</h2>
       <div id="skills-portal"></div>
     </div>
     <!--
